# gvfs-backup

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
example/: file-new.c
src/: backup.c  backup.h
